--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,15 @@
     opacity: 1;
   }
 }
+
+.badge {
+  position: absolute;
+  right: -20px;
+  top: 10px;
+  background: skyblue;
+  text-align: center;
+  border-radius: 30px 30px 30px 30px;
+  color: white;
+  padding: 5px 10px;
+  font-size: 20px;
+}
