adding select script. adjusting css for all pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,11 +7,17 @@
   body {
     @apply bg-secondary text-primary;
   }
-
+      
   * {
+    @apply m-0 p-0 box-border;
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
   .no-scrollbar {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
-}
 }
