--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,17 @@
     scrollbar-width: none; /* Firefox */
   }
 }
+
+@layer utilities {
+  @variants responsive {
+    /* Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+    }
+  }
+}
