Binder Table Refresh
-Moved to tanstack tables
-Updated so you can search the table by anything
-Moved deletebinder to its own component to call it
-Cleaned up visual stuff on binders page

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,12 +11,19 @@
   max-width: 1200px;
   margin: 0 auto;
 }
-
 .light .slick-dots li button:before {
   color: var(--blue-color);
 }
 
 .light .slick-dots li.slick-active button:before {
+  color: var(--blue-color);
+}
+
+.dark .slick-dots li button:before {
+  color: var(--blue-color);
+}
+
+.dark .slick-dots li.slick-active button:before {
   color: var(--blue-color);
 }
 
